[project]
name = "keysight-b1530a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cffi>=1.17.1",
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
]
tests = [
    "pytest>=8.3.5",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
"keysight_b1530a" = [
    "lib/wgfmu.dll",
    "lib/wgfmu.h",
]
